// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer is rendering closed 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isOpen={false}
      >
        <WithStyles(Drawer)
          closeTimeout={500}
          innerRef={null}
          isOpen={false}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "2": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi__",
                "generateId": [Function],
              },
            }
          }
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          side="right"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHeaderHover": "#EBECEF",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 20,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "largeText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          width="500px"
        >
          <Drawer
            classes={
              Object {
                "Text": "HoiPoi__Drawer__Text-1-1",
                "left": "HoiPoi__Drawer__left-1-4",
                "overlay": "HoiPoi__Drawer__overlay-1-2",
                "right": "HoiPoi__Drawer__right-1-3",
                "root": "HoiPoi__Drawer__root-1-0",
              }
            }
            closeTimeout={500}
            isOpen={false}
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            side="right"
            width="500px"
          >
            <Modal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Drawer__root-1-0 HoiPoi__Drawer__right-1-3"
              closeTimeoutMS={500}
              isOpen={false}
              overlayClassName="HoiPoi__Drawer__overlay-1-2"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={false}
              shouldCloseOnOverlayClick={false}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "width": "500px",
                  },
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    class="ReactModalPortal"
                  />
                }
              >
                <ModalPortal
                  ariaHideApp={false}
                  bodyOpenClassName="ReactModal__Body--open"
                  className="HoiPoi__Drawer__root-1-0 HoiPoi__Drawer__right-1-3"
                  closeTimeoutMS={500}
                  defaultStyles={
                    Object {
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "#fff",
                        "border": "1px solid #ccc",
                        "borderRadius": "4px",
                        "bottom": "40px",
                        "left": "40px",
                        "outline": "none",
                        "overflow": "auto",
                        "padding": "20px",
                        "position": "absolute",
                        "right": "40px",
                        "top": "40px",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(255, 255, 255, 0.75)",
                        "bottom": 0,
                        "left": 0,
                        "position": "fixed",
                        "right": 0,
                        "top": 0,
                      },
                    }
                  }
                  isOpen={false}
                  overlayClassName="HoiPoi__Drawer__overlay-1-2"
                  parentSelector={[Function]}
                  portalClassName="ReactModalPortal"
                  role="dialog"
                  shouldCloseOnEsc={false}
                  shouldCloseOnOverlayClick={false}
                  shouldFocusAfterRender={true}
                  shouldReturnFocusAfterClose={true}
                  style={
                    Object {
                      "content": Object {
                        "width": "500px",
                      },
                    }
                  }
                />
              </Portal>
            </Modal>
          </Drawer>
        </WithStyles(Drawer)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Drawer is rendering opened with content 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        isOpen={true}
      >
        <WithStyles(Drawer)
          closeTimeout={500}
          innerRef={null}
          isOpen={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "2": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi__HoiPoi__",
                "generateId": [Function],
              },
            }
          }
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          side="right"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHeaderHover": "#EBECEF",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 20,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "largeText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          width="500px"
        >
          <Drawer
            classes={
              Object {
                "Text": "HoiPoi__Drawer__Text-2-1",
                "left": "HoiPoi__Drawer__left-2-4",
                "overlay": "HoiPoi__Drawer__overlay-2-2",
                "right": "HoiPoi__Drawer__right-2-3",
                "root": "HoiPoi__Drawer__root-2-0",
              }
            }
            closeTimeout={500}
            isOpen={true}
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            side="right"
            width="500px"
          >
            <Modal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Drawer__root-2-0 HoiPoi__Drawer__right-2-3"
              closeTimeoutMS={500}
              isOpen={true}
              overlayClassName="HoiPoi__Drawer__overlay-2-2"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={false}
              shouldCloseOnOverlayClick={false}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "width": "500px",
                  },
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    class="ReactModalPortal"
                  >
                    <div
                      class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Drawer__overlay-2-2"
                    >
                      <div
                        class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Drawer__root-2-0 HoiPoi__Drawer__right-2-3"
                        role="dialog"
                        style="width: 500px;"
                        tabindex="-1"
                      >
                        <span
                          class="HoiPoi__Text__root-2-5 HoiPoi__Text__normal-2-12 HoiPoi__Text__medium-2-8 HoiPoi__Drawer__Text-2-1"
                        >
                          <span>
                            Lorem Ipsum
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                }
              >
                <ModalPortal
                  ariaHideApp={false}
                  bodyOpenClassName="ReactModal__Body--open"
                  className="HoiPoi__Drawer__root-2-0 HoiPoi__Drawer__right-2-3"
                  closeTimeoutMS={500}
                  defaultStyles={
                    Object {
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "#fff",
                        "border": "1px solid #ccc",
                        "borderRadius": "4px",
                        "bottom": "40px",
                        "left": "40px",
                        "outline": "none",
                        "overflow": "auto",
                        "padding": "20px",
                        "position": "absolute",
                        "right": "40px",
                        "top": "40px",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(255, 255, 255, 0.75)",
                        "bottom": 0,
                        "left": 0,
                        "position": "fixed",
                        "right": 0,
                        "top": 0,
                      },
                    }
                  }
                  isOpen={true}
                  overlayClassName="HoiPoi__Drawer__overlay-2-2"
                  parentSelector={[Function]}
                  portalClassName="ReactModalPortal"
                  role="dialog"
                  shouldCloseOnEsc={false}
                  shouldCloseOnOverlayClick={false}
                  shouldFocusAfterRender={true}
                  shouldReturnFocusAfterClose={true}
                  style={
                    Object {
                      "content": Object {
                        "width": "500px",
                      },
                    }
                  }
                >
                  <div
                    className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Drawer__overlay-2-2"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Drawer__root-2-0 HoiPoi__Drawer__right-2-3"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      role="dialog"
                      style={
                        Object {
                          "width": "500px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <JssContextSubscriber
                        className="HoiPoi__Drawer__Text-2-1"
                      >
                        <WithStyles(Text)
                          className="HoiPoi__Drawer__Text-2-1"
                          innerRef={null}
                          isTruncated={false}
                          jssContext={
                            Object {
                              "disableStylesGeneration": false,
                              "jss": Jss {
                                "generateId": [Function],
                                "id": 2,
                                "options": Object {
                                  "Renderer": [Function],
                                  "createGenerateId": [Function],
                                  "plugins": Array [],
                                },
                                "plugins": PluginsRegistry {
                                  "plugins": Object {
                                    "external": Array [
                                      Object {
                                        "onCreateRule": [Function],
                                        "onProcessStyle": [Function],
                                        "onUpdate": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                        "onProcessRule": [Function],
                                      },
                                      Object {
                                        "onProcessRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                        "onProcessRule": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessRule": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                    ],
                                    "internal": Array [
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onCreateRule": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                    ],
                                  },
                                  "registry": Object {
                                    "onChangeValue": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onCreateRule": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onProcessRule": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onProcessSheet": Array [],
                                    "onProcessStyle": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onUpdate": Array [
                                      [Function],
                                    ],
                                  },
                                },
                                "version": "10.0.0-alpha.16",
                              },
                              "managers": Object {
                                "1": SheetsManager {
                                  "length": 1,
                                  "sheets": WeakMap {},
                                },
                                "2": SheetsManager {
                                  "length": 1,
                                  "sheets": WeakMap {},
                                },
                              },
                              "sheetOptions": Object {
                                "classNamePrefix": "HoiPoi__HoiPoi__",
                                "generateId": [Function],
                              },
                            }
                          }
                          overrides={Object {}}
                          size="medium"
                          theme={
                            Object {
                              "colors": Object {
                                "black": "#262B34",
                                "blackLight": "#5f656b",
                                "disabledGrey": "#ced4d9",
                                "green": "#86AD20",
                                "greenLight": "#e7f1d5",
                                "grey": "#697782",
                                "greyLight": "#f0f3f5",
                                "greySoft": "#788590",
                                "lines": "#dce3eb",
                                "link": "#216db3",
                                "linkDark": "#174a79",
                                "overlay": "rgba(33,33,33,0.55)",
                                "placeholders": "#e1e4e7",
                                "placeholdersHover": "#d0d4d8",
                                "primary": "#FF8C00",
                                "primaryDark": "#C87600",
                                "primaryLight": "#fef4e6",
                                "primarySoft": "#ff9d26",
                                "red": "#f04540",
                                "redDark": "#C43833",
                                "redLight": "#FAE7E7",
                                "redSoft": "#FF544F",
                                "secondary": "#00A8Be",
                                "secondaryGrey": "#e4eeff",
                                "secondaryLight": "#D6EEF2",
                                "secondarySoft": "#AADFE7",
                                "shadow": "rgba(0, 0, 0, 0.25)",
                                "tableHeader": "#f6f7f9",
                                "tableHeaderHover": "#EBECEF",
                                "tableHover": "#FAFBFC",
                                "text": Object {
                                  "black": "#3c4248",
                                  "danger": "white",
                                  "default": "#697782",
                                  "green": "#86AD20",
                                  "greySoft": "#788590",
                                  "primary": "white",
                                  "red": "#f04540",
                                  "secondary": "#00A8Be",
                                  "white": "#FFFFFF",
                                  "yellow": "#E9B200",
                                },
                                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                                "white": "#FFFFFF",
                                "yellow": "#E9B200",
                                "yellowLight": "#FFF9DD",
                              },
                              "effects": Object {
                                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                                "buttonActive": Object {
                                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                                },
                              },
                              "typography": Object {
                                "bigText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 20,
                                  "letterSpacing": 0.5,
                                },
                                "button": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 11,
                                  "lineHeight": 1.5,
                                },
                                "defaultText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 13,
                                  "letterSpacing": 0.5,
                                },
                                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                "fontSizeBase": 13,
                                "fontSizeSmall": 11,
                                "largeText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 16,
                                  "letterSpacing": 0.5,
                                },
                                "letterSpacing": 0.5,
                                "lineHeightBase": 1.5,
                                "smallText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 11,
                                  "letterSpacing": 0.5,
                                },
                              },
                            }
                          }
                          type="normal"
                        >
                          <Text
                            className="HoiPoi__Drawer__Text-2-1"
                            classes={
                              Object {
                                "Loader": "HoiPoi__Text__Loader-2-15",
                                "big": "HoiPoi__Text__big-2-10",
                                "bold": "HoiPoi__Text__bold-2-11",
                                "isLoading": "HoiPoi__Text__isLoading-2-14",
                                "large": "HoiPoi__Text__large-2-9",
                                "light": "HoiPoi__Text__light-2-13",
                                "medium": "HoiPoi__Text__medium-2-8",
                                "normal": "HoiPoi__Text__normal-2-12",
                                "root": "HoiPoi__Text__root-2-5",
                                "small": "HoiPoi__Text__small-2-7",
                                "truncated": "HoiPoi__Text__truncated-2-6",
                              }
                            }
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-2-5 HoiPoi__Text__normal-2-12 HoiPoi__Text__medium-2-8 HoiPoi__Drawer__Text-2-1"
                            >
                              <span>
                                Lorem Ipsum
                              </span>
                            </span>
                          </Text>
                        </WithStyles(Text)>
                      </JssContextSubscriber>
                    </div>
                  </div>
                </ModalPortal>
              </Portal>
            </Modal>
          </Drawer>
        </WithStyles(Drawer)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Drawer pass width and classnames to modal 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "black": "#262B34",
          "blackLight": "#5f656b",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "red": "#f04540",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellowLight": "#FFF9DD",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 2,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.0.0-alpha.16",
        }
      }
    >
      <JssContextSubscriber
        className="className-ipsum"
        classes={
          Object {
            "overlay": "overlay-ipsum",
          }
        }
        isOpen={true}
        width="400px"
      >
        <WithStyles(Drawer)
          className="className-ipsum"
          classes={
            Object {
              "overlay": "overlay-ipsum",
            }
          }
          closeTimeout={500}
          innerRef={null}
          isOpen={true}
          jssContext={
            Object {
              "disableStylesGeneration": false,
              "jss": Jss {
                "generateId": [Function],
                "id": 2,
                "options": Object {
                  "Renderer": [Function],
                  "createGenerateId": [Function],
                  "plugins": Array [],
                },
                "plugins": PluginsRegistry {
                  "plugins": Object {
                    "external": Array [
                      Object {
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                        "onUpdate": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                        "onProcessRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onProcessRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onProcessStyle": [Function],
                      },
                    ],
                    "internal": Array [
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onChangeValue": [Function],
                        "onCreateRule": [Function],
                        "onProcessStyle": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                      Object {
                        "onCreateRule": [Function],
                      },
                    ],
                  },
                  "registry": Object {
                    "onChangeValue": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onCreateRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessRule": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onProcessSheet": Array [],
                    "onProcessStyle": Array [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                    ],
                    "onUpdate": Array [
                      [Function],
                    ],
                  },
                },
                "version": "10.0.0-alpha.16",
              },
              "managers": Object {
                "1": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
                "2": SheetsManager {
                  "length": 1,
                  "sheets": WeakMap {},
                },
              },
              "sheetOptions": Object {
                "classNamePrefix": "HoiPoi__HoiPoi__HoiPoi__",
                "generateId": [Function],
              },
            }
          }
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          side="right"
          theme={
            Object {
              "colors": Object {
                "black": "#262B34",
                "blackLight": "#5f656b",
                "disabledGrey": "#ced4d9",
                "green": "#86AD20",
                "greenLight": "#e7f1d5",
                "grey": "#697782",
                "greyLight": "#f0f3f5",
                "greySoft": "#788590",
                "lines": "#dce3eb",
                "link": "#216db3",
                "linkDark": "#174a79",
                "overlay": "rgba(33,33,33,0.55)",
                "placeholders": "#e1e4e7",
                "placeholdersHover": "#d0d4d8",
                "primary": "#FF8C00",
                "primaryDark": "#C87600",
                "primaryLight": "#fef4e6",
                "primarySoft": "#ff9d26",
                "red": "#f04540",
                "redDark": "#C43833",
                "redLight": "#FAE7E7",
                "redSoft": "#FF544F",
                "secondary": "#00A8Be",
                "secondaryGrey": "#e4eeff",
                "secondaryLight": "#D6EEF2",
                "secondarySoft": "#AADFE7",
                "shadow": "rgba(0, 0, 0, 0.25)",
                "tableHeader": "#f6f7f9",
                "tableHeaderHover": "#EBECEF",
                "tableHover": "#FAFBFC",
                "text": Object {
                  "black": "#3c4248",
                  "danger": "white",
                  "default": "#697782",
                  "green": "#86AD20",
                  "greySoft": "#788590",
                  "primary": "white",
                  "red": "#f04540",
                  "secondary": "#00A8Be",
                  "white": "#FFFFFF",
                  "yellow": "#E9B200",
                },
                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                "white": "#FFFFFF",
                "yellow": "#E9B200",
                "yellowLight": "#FFF9DD",
              },
              "effects": Object {
                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                "buttonActive": Object {
                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                },
              },
              "typography": Object {
                "bigText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 20,
                  "letterSpacing": 0.5,
                },
                "button": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "lineHeight": 1.5,
                },
                "defaultText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 13,
                  "letterSpacing": 0.5,
                },
                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSizeBase": 13,
                "fontSizeSmall": 11,
                "largeText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 16,
                  "letterSpacing": 0.5,
                },
                "letterSpacing": 0.5,
                "lineHeightBase": 1.5,
                "smallText": Object {
                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": 11,
                  "letterSpacing": 0.5,
                },
              },
            }
          }
          width="400px"
        >
          <Drawer
            className="className-ipsum"
            classes={
              Object {
                "Text": "HoiPoi__Drawer__Text-3-1",
                "left": "HoiPoi__Drawer__left-3-4",
                "overlay": "HoiPoi__Drawer__overlay-3-2 overlay-ipsum",
                "right": "HoiPoi__Drawer__right-3-3",
                "root": "HoiPoi__Drawer__root-3-0",
              }
            }
            closeTimeout={500}
            isOpen={true}
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            side="right"
            width="400px"
          >
            <Modal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Drawer__root-3-0 HoiPoi__Drawer__right-3-3 className-ipsum"
              closeTimeoutMS={500}
              isOpen={true}
              overlayClassName="HoiPoi__Drawer__overlay-3-2 overlay-ipsum"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={false}
              shouldCloseOnOverlayClick={false}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "width": "400px",
                  },
                }
              }
            >
              <Portal
                containerInfo={
                  <div
                    class="ReactModalPortal"
                  >
                    <div
                      class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Drawer__overlay-3-2 overlay-ipsum"
                    >
                      <div
                        class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Drawer__root-3-0 HoiPoi__Drawer__right-3-3 className-ipsum"
                        role="dialog"
                        style="width: 400px;"
                        tabindex="-1"
                      >
                        <span
                          class="HoiPoi__Text__root-3-5 HoiPoi__Text__normal-3-12 HoiPoi__Text__medium-3-8 HoiPoi__Drawer__Text-3-1"
                        >
                          <span>
                            Lorem Ipsum
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                }
              >
                <ModalPortal
                  ariaHideApp={false}
                  bodyOpenClassName="ReactModal__Body--open"
                  className="HoiPoi__Drawer__root-3-0 HoiPoi__Drawer__right-3-3 className-ipsum"
                  closeTimeoutMS={500}
                  defaultStyles={
                    Object {
                      "content": Object {
                        "WebkitOverflowScrolling": "touch",
                        "background": "#fff",
                        "border": "1px solid #ccc",
                        "borderRadius": "4px",
                        "bottom": "40px",
                        "left": "40px",
                        "outline": "none",
                        "overflow": "auto",
                        "padding": "20px",
                        "position": "absolute",
                        "right": "40px",
                        "top": "40px",
                      },
                      "overlay": Object {
                        "backgroundColor": "rgba(255, 255, 255, 0.75)",
                        "bottom": 0,
                        "left": 0,
                        "position": "fixed",
                        "right": 0,
                        "top": 0,
                      },
                    }
                  }
                  isOpen={true}
                  overlayClassName="HoiPoi__Drawer__overlay-3-2 overlay-ipsum"
                  parentSelector={[Function]}
                  portalClassName="ReactModalPortal"
                  role="dialog"
                  shouldCloseOnEsc={false}
                  shouldCloseOnOverlayClick={false}
                  shouldFocusAfterRender={true}
                  shouldReturnFocusAfterClose={true}
                  style={
                    Object {
                      "content": Object {
                        "width": "400px",
                      },
                    }
                  }
                >
                  <div
                    className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Drawer__overlay-3-2 overlay-ipsum"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    style={Object {}}
                  >
                    <div
                      className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Drawer__root-3-0 HoiPoi__Drawer__right-3-3 className-ipsum"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      role="dialog"
                      style={
                        Object {
                          "width": "400px",
                        }
                      }
                      tabIndex="-1"
                    >
                      <JssContextSubscriber
                        className="HoiPoi__Drawer__Text-3-1"
                      >
                        <WithStyles(Text)
                          className="HoiPoi__Drawer__Text-3-1"
                          innerRef={null}
                          isTruncated={false}
                          jssContext={
                            Object {
                              "disableStylesGeneration": false,
                              "jss": Jss {
                                "generateId": [Function],
                                "id": 2,
                                "options": Object {
                                  "Renderer": [Function],
                                  "createGenerateId": [Function],
                                  "plugins": Array [],
                                },
                                "plugins": PluginsRegistry {
                                  "plugins": Object {
                                    "external": Array [
                                      Object {
                                        "onCreateRule": [Function],
                                        "onProcessStyle": [Function],
                                        "onUpdate": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                        "onProcessRule": [Function],
                                      },
                                      Object {
                                        "onProcessRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                        "onProcessRule": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onProcessRule": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onProcessStyle": [Function],
                                      },
                                    ],
                                    "internal": Array [
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onChangeValue": [Function],
                                        "onCreateRule": [Function],
                                        "onProcessStyle": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                      Object {
                                        "onCreateRule": [Function],
                                      },
                                    ],
                                  },
                                  "registry": Object {
                                    "onChangeValue": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onCreateRule": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onProcessRule": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onProcessSheet": Array [],
                                    "onProcessStyle": Array [
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                      [Function],
                                    ],
                                    "onUpdate": Array [
                                      [Function],
                                    ],
                                  },
                                },
                                "version": "10.0.0-alpha.16",
                              },
                              "managers": Object {
                                "1": SheetsManager {
                                  "length": 1,
                                  "sheets": WeakMap {},
                                },
                                "2": SheetsManager {
                                  "length": 1,
                                  "sheets": WeakMap {},
                                },
                              },
                              "sheetOptions": Object {
                                "classNamePrefix": "HoiPoi__HoiPoi__HoiPoi__",
                                "generateId": [Function],
                              },
                            }
                          }
                          overrides={Object {}}
                          size="medium"
                          theme={
                            Object {
                              "colors": Object {
                                "black": "#262B34",
                                "blackLight": "#5f656b",
                                "disabledGrey": "#ced4d9",
                                "green": "#86AD20",
                                "greenLight": "#e7f1d5",
                                "grey": "#697782",
                                "greyLight": "#f0f3f5",
                                "greySoft": "#788590",
                                "lines": "#dce3eb",
                                "link": "#216db3",
                                "linkDark": "#174a79",
                                "overlay": "rgba(33,33,33,0.55)",
                                "placeholders": "#e1e4e7",
                                "placeholdersHover": "#d0d4d8",
                                "primary": "#FF8C00",
                                "primaryDark": "#C87600",
                                "primaryLight": "#fef4e6",
                                "primarySoft": "#ff9d26",
                                "red": "#f04540",
                                "redDark": "#C43833",
                                "redLight": "#FAE7E7",
                                "redSoft": "#FF544F",
                                "secondary": "#00A8Be",
                                "secondaryGrey": "#e4eeff",
                                "secondaryLight": "#D6EEF2",
                                "secondarySoft": "#AADFE7",
                                "shadow": "rgba(0, 0, 0, 0.25)",
                                "tableHeader": "#f6f7f9",
                                "tableHeaderHover": "#EBECEF",
                                "tableHover": "#FAFBFC",
                                "text": Object {
                                  "black": "#3c4248",
                                  "danger": "white",
                                  "default": "#697782",
                                  "green": "#86AD20",
                                  "greySoft": "#788590",
                                  "primary": "white",
                                  "red": "#f04540",
                                  "secondary": "#00A8Be",
                                  "white": "#FFFFFF",
                                  "yellow": "#E9B200",
                                },
                                "transparentBlack": "rgba(38, 43, 52, 0.8)",
                                "white": "#FFFFFF",
                                "yellow": "#E9B200",
                                "yellowLight": "#FFF9DD",
                              },
                              "effects": Object {
                                "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
                                "buttonActive": Object {
                                  "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
                                },
                              },
                              "typography": Object {
                                "bigText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 20,
                                  "letterSpacing": 0.5,
                                },
                                "button": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 11,
                                  "lineHeight": 1.5,
                                },
                                "defaultText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 13,
                                  "letterSpacing": 0.5,
                                },
                                "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                "fontSizeBase": 13,
                                "fontSizeSmall": 11,
                                "largeText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 16,
                                  "letterSpacing": 0.5,
                                },
                                "letterSpacing": 0.5,
                                "lineHeightBase": 1.5,
                                "smallText": Object {
                                  "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                                  "fontSize": 11,
                                  "letterSpacing": 0.5,
                                },
                              },
                            }
                          }
                          type="normal"
                        >
                          <Text
                            className="HoiPoi__Drawer__Text-3-1"
                            classes={
                              Object {
                                "Loader": "HoiPoi__Text__Loader-3-15",
                                "big": "HoiPoi__Text__big-3-10",
                                "bold": "HoiPoi__Text__bold-3-11",
                                "isLoading": "HoiPoi__Text__isLoading-3-14",
                                "large": "HoiPoi__Text__large-3-9",
                                "light": "HoiPoi__Text__light-3-13",
                                "medium": "HoiPoi__Text__medium-3-8",
                                "normal": "HoiPoi__Text__normal-3-12",
                                "root": "HoiPoi__Text__root-3-5",
                                "small": "HoiPoi__Text__small-3-7",
                                "truncated": "HoiPoi__Text__truncated-3-6",
                              }
                            }
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-3-5 HoiPoi__Text__normal-3-12 HoiPoi__Text__medium-3-8 HoiPoi__Drawer__Text-3-1"
                            >
                              <span>
                                Lorem Ipsum
                              </span>
                            </span>
                          </Text>
                        </WithStyles(Text)>
                      </JssContextSubscriber>
                    </div>
                  </div>
                </ModalPortal>
              </Portal>
            </Modal>
          </Drawer>
        </WithStyles(Drawer)>
      </JssContextSubscriber>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
